fix(caret): resolve rare misalignment on initial page load

--- a/src/index.css
+++ b/src/index.css
@@ -63,6 +63,7 @@
    src: url("/assets/font/Satoshi-Regular.woff") format("woff");
    font-weight: 400;
    font-style: normal;
+   font-display: swap;
 }
 
 @font-face {
@@ -70,6 +71,7 @@
    src: url("/assets/font/Satoshi-Medium.woff") format("woff");
    font-weight: 500;
    font-style: normal;
+   font-display: swap;
 }
 
 @font-face {
@@ -77,6 +79,7 @@
    src: url("/assets/font/SpaceMono-Regular.woff2") format("woff2");
    font-weight: 400;
    font-style: normal;
+   font-display: swap;
 }
 
 @font-face {
@@ -84,6 +87,7 @@
    src: url("/assets/font/SpaceMono-Bold.woff2") format("woff2");
    font-weight: 700;
    font-style: normal;
+   font-display: swap;
 }
 
 @font-face {
@@ -91,6 +95,7 @@
    src: url("/assets/font/RobotoMono-Regular.woff2") format("woff2");
    font-weight: 400;
    font-style: normal;
+   font-display: swap;
 }
 
 @layer base {
